Closed Bug 2045840 Opened 1 month ago Closed 16 days ago

WebGPU: toDataURL doesn't work on a canvas that's never been rendered to

Categories

(Core :: Graphics: WebGPU, defect, P1)

Firefox 153
defect

Tracking

()

RESOLVED FIXED
154 Branch
Tracking Status
firefox154 --- fixed

People

(Reporter: mozilla2, Assigned: aleiserson)

References

Details

(Keywords: webcompat:platform-bug)

User Story

user-impact-score:25

Attachments

(2 files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/149.0.0.0 Safari/537.36

Steps to reproduce:

run the attached repo

Actual results:

The first capture, when nothing has ever been rendered to a canvas, fails to produce an image

Expected results:

It should have made 300x150 solid black image (unclear if it should be transparent black or opaque black. Need to read the specs).

The Bugbug bot thinks this bug should belong to the 'Core::Graphics: Canvas2D' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Graphics: Canvas2D
Product: Firefox → Core
Component: Graphics: Canvas2D → Graphics: WebGPU
Duplicate of this bug: 2047049
Severity: -- → S3
Assignee: nobody → aleiserson
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Blocks: 2014639
User Story: (updated)
Pushed by aleiserson@mozilla.com: https://github.com/mozilla-firefox/firefox/commit/aaa996745512 https://hg.mozilla.org/integration/autoland/rev/bc7ee878a290 Support readback from a WebGPU canvas before it is used r=webgpu-reviewers,ErichDonGubler
Priority: -- → P1
Status: ASSIGNED → RESOLVED
Closed: 16 days ago
Resolution: --- → FIXED
Target Milestone: --- → 154 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: